<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".ui.add.AddCarFragment">


    <androidx.constraintlayout.widget.Group
        android:id="@+id/containerAddPhoto"
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="imgAdd,tvAddPhoto,imgCar"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageView
        android:id="@+id/imgAdd"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_add_photo"
        app:layout_constraintStart_toStartOf="@id/imgCar"
        app:layout_constraintEnd_toEndOf="@id/imgCar"
        app:layout_constraintTop_toTopOf="@id/imgCar"
        app:layout_constraintBottom_toBottomOf="@id/imgCar"
         />

    <TextView
        android:id="@+id/tvAddPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_photo"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/imgAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imgCar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:riv_corner_radius="12dp"
        android:scaleType="centerCrop"
        android:background="@drawable/bg_rounded_yellow_light"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <TextView
        android:id="@+id/tvBrand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_yellow_light"
        android:hint="@string/select_brand"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imgCar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:drawableEndCompat="@drawable/ic_next" />

    <TextView
        android:id="@+id/tvModel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:background="@drawable/bg_rounded_yellow_light"
        android:hint="@string/select_model"
        android:maxLines="1"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvBrand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:drawableEndCompat="@drawable/ic_next" />

    <EditText
        android:id="@+id/etBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_yellow_light"
        android:hint="@string/body"
        android:maxLines="1"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvModel"
        />
    <EditText
        android:id="@+id/etPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_yellow_light"
        android:hint="@string/price_"
        android:inputType="number"
        android:maxLines="1"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:drawableEnd="@drawable/kg_som"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etBody"
         />
    <EditText
        android:id="@+id/etSeriesYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_yellow_light"
        android:hint="@string/seriesyear"
        android:maxLines="1"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPrice"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveCar"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="50dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/teal_700"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>